Bug 92689 - First letter selection by keyboard in combo boxes doesn't work
Summary: First letter selection by keyboard in combo boxes doesn't work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.0.0.2 rc
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0 target:5.0.0
Keywords: bibisected, bisected, regression
: 90367 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-07-12 11:10 UTC by andis.lazdins
Modified: 2016-10-25 19:19 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andis.lazdins 2015-07-12 11:10:01 UTC
Ubuntu 14.04, 32 bit, Libreoffice 5.0.0.3

In previous versions it was possible to select 1st letter of selection in combo boxes typing by keyboard. For instance:

1. select Format > Character from menu.
2. Go to Fonts Tab.
3. press on small button in Language selection combo box.
4. when list is open, type a fist latter of language you need (in my case default is Latvian and I want English, so I type "E".
5. Nothing happens.

In previous versions (4.4.4.5):
5. Selection moves to the first option starting with "E" so user don't have to go through all the list.

This is probably tiny, but very useful feature.
Comment 1 Joel Madero 2015-07-12 15:55:45 UTC
Oh yes - that's pretty annoying :-b


Ubuntu 15.04 x64
LibreOffice 5.0.0.3 & 4.4.4.2


Marking as:
New (confirmed);
Minor - can slow down professional quality work but will not prevent it;
Medium - regression so bumped up from low


Thanks! Hopefully we can fix this one relatively quickly.
Comment 2 Michael Weghorn 2015-07-17 18:59:16 UTC
bibisect result (using bibisect-50max repository):
 4285e26e7e67257abfbba12cfa60d22b7d24c7c4 is the first bad commit
commit 4285e26e7e67257abfbba12cfa60d22b7d24c7c4
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Wed May 27 20:43:09 2015 +0800

    source-hash-27e0fee7da99f3df722668d132bc034bef421514
    
    commit 27e0fee7da99f3df722668d132bc034bef421514
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Fri Mar 27 15:28:28 2015 +0000
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Fri Mar 27 15:30:58 2015 +0000
    
        gnome#745909 grab/ungrab keyboard for menus
    
        Change-Id: Id0593e1c9af79084ae798f26a0be37c57d254227

:040000 040000 b906ce74753d248be66e07c8d64d5b3515052347 d7f989479177c801bea61954048f22003d936803 M	opt

---

$ git bisect log
# bad: [dda106fd616b7c0b8dc2370f6f1184501b01a49e] source-hash-0db96caf0fcce09b87621c11b584a6d81cc7df86
# good: [5b9dd620df316345477f0b6e6c9ed8ada7b6c091] source-hash-2851ce5afd0f37764cbbc2c2a9a63c7adc844311
git bisect start 'latest' 'oldest'
# good: [0c30a2c797b249d0cd804cb71554946e2276b557] source-hash-45aaec8206182c16025cbcb20651ddbdf558b95d
git bisect good 0c30a2c797b249d0cd804cb71554946e2276b557
# bad: [2ce02b2ce56f12b9fcb9efbd380596975a3a5686] source-hash-17d714eef491bda2512ba8012e5b3067ca19a5be
git bisect bad 2ce02b2ce56f12b9fcb9efbd380596975a3a5686
# good: [e4deb8a42948865b7b23d447c1547033cb54535b] source-hash-ce46c98dbeb3364684843daa5b269c74fce2af64
git bisect good e4deb8a42948865b7b23d447c1547033cb54535b
# bad: [30a39c6a9e3c59d493447b25aaeb1f70f194bbd7] source-hash-be44ec8c28ce2af9644fcc58317dc1c9b20e2a21
git bisect bad 30a39c6a9e3c59d493447b25aaeb1f70f194bbd7
# bad: [283b2ccc2ba2f6257fa67d1dd9b035e7dd9d6d1d] source-hash-3f97e6e03ac5180bfdbdaa768480bc6bc3ee5664
git bisect bad 283b2ccc2ba2f6257fa67d1dd9b035e7dd9d6d1d
# bad: [1d8e9728fd50ef6d1c6e9f3af5fb9cbe95ca5ff4] source-hash-c6282e9bc42dcd1f85005db94416fcaf4caa50c1
git bisect bad 1d8e9728fd50ef6d1c6e9f3af5fb9cbe95ca5ff4
# good: [55681a572fa7695596ff9a7f0454906c57996d12] source-hash-b627a4d98f66e1c7b36d12bc4683c7970c89d69f
git bisect good 55681a572fa7695596ff9a7f0454906c57996d12
# good: [30680e591b3eb03b9043e144d58a8baee9ef9b4c] source-hash-9bccd26037188f20fec244bede3022900d1b96fa
git bisect good 30680e591b3eb03b9043e144d58a8baee9ef9b4c
# bad: [f9e1e2d37e20a31f335d596ba7453fb7837f8356] source-hash-d63c5326b1d03a7a40cd14833853b7bdf324cdd2
git bisect bad f9e1e2d37e20a31f335d596ba7453fb7837f8356
# good: [6d931dac842c32770c9f472b0dcded1ad4cf3620] source-hash-c4a9241f72e3b7bf84eaadc51dbaa2accc7b920c
git bisect good 6d931dac842c32770c9f472b0dcded1ad4cf3620
# good: [12f3b83960c90aa15365050723a668710f43f116] source-hash-757f461ef12548af0be470f7c05ff67df3dc1314
git bisect good 12f3b83960c90aa15365050723a668710f43f116
# bad: [4285e26e7e67257abfbba12cfa60d22b7d24c7c4] source-hash-27e0fee7da99f3df722668d132bc034bef421514
git bisect bad 4285e26e7e67257abfbba12cfa60d22b7d24c7c4
# good: [2bf1f54b54549a73c6cd809460e7d33dbd2ab784] source-hash-8c3cf9dd48e40604867d3a28bddaccd65142df17
git bisect good 2bf1f54b54549a73c6cd809460e7d33dbd2ab784
# first bad commit: [4285e26e7e67257abfbba12cfa60d22b7d24c7c4] source-hash-27e0fee7da99f3df722668d132bc034bef421514
Comment 3 Michael Weghorn 2015-07-17 18:59:45 UTC
Caolán, could you possibly have a look at this?
Comment 4 Commit Notification 2015-07-23 08:57:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=57ec66e294b1405a85029aa1f1c0e9485ad4e5b4

Resolves: tdf#92689 grab keyboard focus to parent, not to earlier generations

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2015-07-23 09:40:16 UTC
was sending the keystrokes to the writer window in the background, not the dialog like was supposed to happen, sigh.
Comment 6 Commit Notification 2015-07-23 10:51:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c6a206010482b22c5d546e10a9ae5ba518ad32a9&h=libreoffice-5-0

Resolves: tdf#92689 grab keyboard focus to parent, not to earlier generations

It will be available in 5.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Eike Rathke (retired, only occasionally showing up) 2015-07-23 11:25:05 UTC
*** Bug 90367 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2015-07-23 15:00:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6291a9c7a48023ca0f382c2e8782bf781112cc2a&h=libreoffice-5-0-0

Resolves: tdf#92689 grab keyboard focus to parent, not to earlier generations

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Robinson Tryon (qubit) 2015-12-17 09:18:27 UTC Comment hidden (obsolete)