Resolves: tdf#92689 grab keyboard focus to parent, not to earlier generations

Change-Id: I4c95f52f0b22ab574f608b93c172e0398e81974b